tests/ast_interpreter/err_arg_count.expected
<string>:1:5: error: function expects 1 argument, but 0 were provided
fun main(arg) {
    ^^^^
